[project]
name = "conceptcycle-backend"
version = "0.1.0"
description = "Backend logic for ConceptCycle"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "fsrs>=6.1.0",
    "openai>=1.97.1",
    "pocketflow>=0.0.3",
    "pymupdf>=1.26.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.2",
    # "semantic-text-splitter>=0.27.0",
    "semantic-text-splitter==0.26.0",
]
